# gdash

./: .gitignore  AUTHORS  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  gamecontrollerdb.txt
caves/: Makefile.am  Makefile.in  create_makefile.sh
caves/ADD_and_TKR/: Boulderdash_A.bd  Boulderdash_B.bd  Boulderdash_C.bd  Boulderdash_D.bd  Boulderdash_E.bd
caves/Achim_Hofmann/: In_The_Future.bd
caves/Add_and_TKR/: Boulderdash_A.gds  Boulderdash_B.gds  Boulderdash_C.gds  Boulderdash_D.gds  Boulderdash_E.gds
caves/Alchemystics/: Alchemyst_Dangerdash_1.bd  Alchemyst_Dangerdash_2.bd  Alchemyst_Dig_2.bd  Alchemyst_Dig_3.bd  Alchemyst_Dig_4.bd  Alchemyst_Dig_5.bd
caves/Alex_Zop/: Nahost_91.bd  Rockford_in_Nimmerland_2.bd  Rockford_in_Nimmerland_2_fixed.bd  Rocki_Rockano_in_Lolli_Land_01.bd  Rocki_Rockano_in_Lolli_Land_01_fixed.bd
caves/Altermaven/: Alchemyst_Dangerdash_1.bd  Alchemyst_Dig_5.bd
caves/Arno_Weber/: Arno_Dash_01.bd  Arno_Dash_02.bd  Arno_Dash_03.bd  Arno_Dash_04.bd  Arno_Dash_05.bd  Arno_Dash_06.bd  Arno_Dash_07.bd  Arno_Dash_08.bd  Arno_Dash_09.bd  Arno_Dash_10.bd  Arno_Dash_11.bd  Arno_Dash_12.bd  Arno_Dash_13.bd  Arno_Dash_14.bd  Arno_Dash_15.bd  Arno_Dash_16.bd  Arno_Dash_17.bd  Arno_Dash_18.bd  Arno_Dash_19.bd  Arno_Dash_20.bd  Arno_Dash_21.bd  Arno_Dash_21_remake.bd  Exploding_Dash.bd  Exploding_Dash_II.bd  Future_Dash.bd  Santa's_BD_Party.bd  Santas_Bd_Party.bd
caves/Artis/: Boulder_Dash_Caves.gds
caves/Atarakushi/: Ataraxy_Dash_001.bd
caves/Bobosoft/: Bobo1_Atari.bd  Bobo3_Atari.bd  Bobo4_Atari.bd
caves/Boulder_Dash_Community/: Xmas_Boulder_Dash_2001.bd  Xmas_Boulder_Dash_2001.gds
caves/Boulderwilli/: Baby_Dash.bd  Blue_Diamonds.bd  Children_1.bd  Midnightdash_2_L1.gds  Midnightdash_2_L2.gds  Midnightdash_2_L3.gds  Midnightdash_2_L4.gds  Midnightdash_2_L5.gds  Moonlight_2.bd  Moonlight_3.bd
caves/CWS/: CWS_Boulder.bd  CWS_Boulder_2.bd  CWS_Boulder_2_Fixed.bd  CWS_Boulder_Dash_3.bd
caves/CaptainPollutionTV/: Boulderdash-UX-2.bd  Boulderdash-UX-3.bd  Boulderdash-UX.bd
caves/Conrad/: Conrad_Dash.gds
caves/Dan_Warren/: Evil_Spiral.gds
caves/Daniel_Tavernier/: Diam_1.gds
caves/Dino/: Water_Dash_06.gds
caves/Don_Pedro/: Boulderdash_X.bd
caves/Dotterteam/: Dotter_Dash_07.gds  Dotter_Dash_07_Atari.bd
caves/Dr_Guru/: Brain_Delicacy.bd  Brain_Delicacy.gds
caves/Dustin/: BD1_Challenges.bd  BD2_Challenges.bd  BD3_Challenges.bd  Boulder_Dash-The_Expert_Levels.bd  Boulder_Dash_-_The_New_Elements.bd  Boulder_Dash_-_The_New_Elements_2.bd  Boulder_Dash_2-The_Expert_Levels.bd  Boulder_Dash_Alphabet.bd  Dustin_s_Boulder_Dash_1.bd  Dustin_s_Boulder_Dash_10.bd  Dustin_s_Boulder_Dash_11.bd  Dustin_s_Boulder_Dash_12.bd  Dustin_s_Boulder_Dash_13.bd  Dustin_s_Boulder_Dash_14.bd  Dustin_s_Boulder_Dash_15_-_Expert_Remix.bd  Dustin_s_Boulder_Dash_16_-_No1_Remix.bd  (+20 more)
docs/: Makefile.in
include/: Makefile.am  Makefile.in  ataripal.cpp  c64_font.cpp  c64_gfx.cpp  dtvpal.cpp  files2c.cpp  for_html.cpp  gamebackground.cpp  gdash_icon_32.cpp  gdash_icon_48.cpp  icons.cpp  levels.cpp  title.cpp
music/: Makefile.in
po/: Makefile.in.in  POTFILES.in  de.gmo  de.po  gdash.pot  hu.gmo  hu.po
shaders/: Makefile.am  Makefile.in  crt-geom.shader
sound/: Makefile.in
src/: Makefile.am  Makefile.in  main.cpp  mainwindow.cpp  mainwindow.hpp  settings.cpp  settings.hpp
(+780 files in other folders)
